[package]
name = "starboard"
version = "0.1.0"
authors = ["JIceberg <jisenberg3@gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.9.1", default-features = true, features = ["collector"] }
tokio = { version = "0.2", features = ["macros"] }
dotenv = "0.15.0"
